[package]
name = "rust-tree"
version = "0.0.1"
authors = ["Todd Matheson <tmatheson11186@gmail.com>"]
edition = "2021"
description = "Basic tree data structure. Not production quality!!"
license = "MIT OR Apache-2.0"
repository = "https://github.com/toddmath/rust-tree"
homepage = "https://github.com/toddmath/rust-tree/tree/v0.0.1"
documentation = "https://docs.rs/rust-tree/0.0.1"
keywords = ["tree", "data structure"] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "toddmath/rust-tree" }
is-it-maintained-open-issues = { repository = "toddmath/rust-tree" }
maintenance = { status = "experimental" } # This may differ between branches.

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
